--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
   <body>
     {{> header}}
 
-    <p>Some introduction will come soon</p>
+    <p>{{screamIt introduction}}</p>
 
     {{> footer}}
   </body>
